tests/fail/fail_continue_outside_loop.kl
// ERROR: kontinua (continue) used outside any loop.
vaziu inisiu() {
    kontinua;
}
